# digibujogens

./: LICENSE  README.md  requirements.txt  setup.cfg
doc/: conf.py  index.rst
etc/: config.yml
src/digibujogens/: __init__.py  __main__.py  __version__.py  cli.py
src/digibujogens/generators/: spread.py
test/digibujogens/: test_cli.py
test/digibujogens/core/: test_config.py  test_logger.py
