[metadata]
name = digibujogens
author = Justin Hammond
author-email = runningempty@gmail.com
url = https://github.com/roaet/digibujogens
description-file = README.md
description-content-type = text/markdown
license = MIT
classifier =
    Development Status :: 2 - Pre-Alpha
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python

[entry_points]
console_scripts =
    digibujogens = digibujogens.cli:main
